# KalamDB

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_REFACTORING_READY.md  ARCHITECTURE_REFACTOR_PLAN.md  AUTH_REFACTORING_STATUS.md  BATCH_FIXES.md  BUG_FIX_AUTH.md  CLI_TESTS_REVIEW.md  COLUMN_ORDERING_FIX_SUMMARY.md  COMPILATION_FIXES_NEEDED.md  Cargo.toml  Cross.toml  DATAFUSION_CATALOG_REGISTRATION_REQUIRED.md  FINAL_FIXES_TODO.md  FINAL_MIGRATION_STATUS.md  FIX_SUMMARY.md  FLUSH_DEBUG_TRACKING.md  FLUSH_STATUS.md  FLUSH_TESTS_REALITY_CHECK.md  INTEGRATION_TEST_IMPLEMENTATION_PLAN.md  INTEGRATION_TEST_STATUS.md  LICENSE.txt  MIGRATION_COMPLETE_REPORT.md  MIGRATION_COMPLETION_SUMMARY.md  MIGRATION_SUMMARY.md  My Notes.md  My Notes.txt  NOTICE  Notes.md  OLD_SPEC_REVIEW_COMPLETE.md  PHASE3B_PROVIDER_CONSOLIDATION_SUMMARY.md  PHASE3C_HANDLER_CONSOLIDATION_SUMMARY.md  PHASE5_SCHEMA_CONSOLIDATION_SUMMARY.md  PHASE5_SYSTEMTABLESREGISTRY_SUMMARY.md  PHASE5_T202_STATELESS_EXECUTOR_SUMMARY.md  PHASE5_TEST_INFRASTRUCTURE_SUMMARY.md  PHASE_10_COMPLETE.md  PHASE_12_COMPLETE_SUMMARY.md  PHASE_13_COMPLETE.md  (+68 more)
backend/: CHRONO_FIX_VERIFICATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  PHASE_1.5_AND_2_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  TEST_FIX_STATUS_FINAL.md  TEST_MIGRATION_FINAL_STATUS.md  TEST_MIGRATION_PROGRESS_DETAILED.md  TEST_MIGRATION_SUCCESS_REPORT.md  batch_compile_output_native_dml.txt  batch_compile_output_native_dml_fix2.txt  build.rs  build_test_errors.txt  check_output.txt  compile_check.txt  config.example.toml  fix_executor_comprehensive.py  fix_executor_methods.py  fix_sql_executor.py  kalamdb-system-topic-tests.txt  manifest_test_output.txt  output_test_testserver.txt  run_tests_serial.sh  server.example.toml  server.toml  test_delete_with_where_clause.txt  test_file_descriptors.sh  test_info_schema.sh  test_migration_progress.md  test_misc_failures.txt  test_misc_failures_subset.txt  test_oauth_user_password_rejected.txt  test_output.txt  test_shared_table_manual.sh  test_soft_delete_count.txt  test_soft_delete_hides_rows.txt  updates.sh
backend/benches/: performance.rs
backend/docs/: LOGGING_COMPARISON.md
backend/logs/: server.jsonl
backend/scripts/: verify-chrono-version.ps1  verify-chrono-version.sh
backend/src/: config.rs  http_runtime.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  middleware.rs  startup.rs
backend/tests/: CLUSTER_NODE_LIFECYCLE_QUICK_REF.md  CLUSTER_SETUP.md  MIGRATION_SUMMARY.md  NODE_LIFECYCLE_IMPLEMENTATION.md  NODE_LIFECYCLE_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  PRODUCTION_READINESS_FINAL_REPORT.md  PRODUCTION_READINESS_STATUS.md  PRODUCTION_READINESS_TESTS.md  README.md  TEST_STATUS.md  WEBSOCKET_TEST_PLAN.md  firebase_auth_test.mjs  quickstart.sh  test_alter_table.rs  test_alter_table_after_flush.rs  test_api_key_auth.rs  test_as_user_impersonation.rs  test_audit_logging.rs  test_audit_logging.rs.disabled  test_auth_performance.rs  test_auth_performance.rs.disabled  test_basic_auth.rs  test_basic_auth.rs.disabled  test_cli_auth.rs  test_cli_auth.rs.disabled  test_code_quality.rs  test_cold_storage_manifest.rs  test_column_id_stability.rs  test_column_ordering.rs  test_column_ordering.rs.disabled  test_combined_data_integrity.rs  test_config_access.rs  test_datafusion_commands.rs  test_datatypes_preservation.rs  test_datetime_timezone_storage.rs  test_dml_complex.rs  test_e2e_auth_flow.rs  test_edge_cases.rs  test_edge_cases.rs.disabled  (+57 more)
benchmark/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  READY.md  RUNNING.md  benchmark-spec.md  run-benchmarks.ps1  run-benchmarks.sh  view-results.ps1  view-results.sh
benchmark/src/: helpers.rs  lib.rs  models.rs
benchmark/tests/: TEST_TEMPLATES.md
benchmark/view/: README.md  index.html
benchv2/: Cargo.toml  README.md  run-benchmarks.ps1  run-benchmarks.sh  run-chat-realtime.sh
benchv2/logs/: server.jsonl
benchv2/results/: bench-2026-02-22-081117-0-3-0-a2.html  bench-2026-02-22-081117-0-3-0-a2.json  bench-2026-02-22-170355-0-3-0-a2.html  bench-2026-02-22-170355-0-3-0-a2.json  bench-2026-02-22-192915-0-3-0-a2.html  bench-2026-02-22-192915-0-3-0-a2.json  bench-2026-02-22-200234-0-3-0-a2.html  bench-2026-02-22-200234-0-3-0-a2.json  bench-2026-02-22-200528-0-3-0-a2.html  bench-2026-02-22-200528-0-3-0-a2.json  bench-2026-02-22-201114-0-3-0-a2.html  bench-2026-02-22-201114-0-3-0-a2.json  bench-2026-02-22-201307-0-3-0-a2.html  bench-2026-02-22-201307-0-3-0-a2.json  bench-2026-02-22-201709-0-3-0-a2.html  bench-2026-02-22-201709-0-3-0-a2.json  bench-2026-02-22-202639-0-3-0-a2.html  bench-2026-02-22-202639-0-3-0-a2.json  bench-2026-02-24-144959-0-3-0-a2.html  bench-2026-02-24-144959-0-3-0-a2.json  bench-2026-02-24-184201-0-3-0-a2.html  bench-2026-02-24-184201-0-3-0-a2.json  bench-2026-04-19-100916-0-4-2-rc-3.html  bench-2026-04-19-100916-0-4-2-rc-3.json  bench-2026-04-19-103808-0-4-2-rc-3.html  bench-2026-04-19-103808-0-4-2-rc-3.json  bench-2026-04-20-102536-0-4-2-rc-3.html  bench-2026-04-20-102536-0-4-2-rc-3.json  bench-2026-04-29-191433-0-4-3-rc-4.html  bench-2026-04-29-191433-0-4-3-rc-4.json
benchv2/src/: client.rs  comparison.rs  config.rs  lib.rs  main.rs  metrics.rs  preflight.rs  runner.rs  system_info.rs  verdict.rs
cli/: .env.sample  CLI_IMPROVEMENTS.md  COMPILATION_FIXES_SUMMARY.md  Cargo.toml  Cargo.toml.backup  IMPROVEMENTS_SUMMARY.md  MARGIN_AND_SPINNER_FIX.md  MULTI_LINE_COMMANDS.md  README.md  SUBSCRIPTION_TESTING.md  TEST_CONFIG.md  build.rs  output_cli_nextest.txt  output_cli_nextest_fix.txt  run-tests.ps1  run-tests.sh  run_integration_tests.sh  smoke_test_results.txt  test_cli_improvements.sh  test_output.txt
cli/.kalam/: history
cli/kalam-cli/: CLI_UX_IMPROVEMENTS.md  Cargo.toml  README.md  VISUAL_ENHANCEMENTS.md  VISUAL_SHOWCASE.md
cli/kalam-link/: Cargo.toml
cli/logs/: server.jsonl
cli/src/: args.rs  completer.rs  config.rs  connect.rs  credentials.rs  error.rs  formatter.rs  highlighter.rs  history.rs  lib.rs  (+4 more)
link/: Cargo.toml  README.md  build.sh  test-wasm.mjs
pg/: Cargo.toml  README.md  test.sh
(+3317 files in other folders)
