[workspace]
resolver = "2"
members = [
    "backend/crates/kalamdb-commons",
    "backend/crates/kalamdb-filestore",
    "backend/crates/kalamdb-system",
    "backend/crates/kalamdb-tables",
    "backend/crates/kalamdb-core",
    "backend/crates/kalamdb-sql",
    "backend/crates/kalamdb-store",
    "backend/crates/kalamdb-api",
    "backend/crates/kalamdb-auth",
    "backend",
    "link",
    "cli",
    "benchmark",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
authors = ["KalamDB Team"]
license = "Apache-2.0"
repository = "https://github.com/jamals86/KalamDB"

# Shared dependencies for all crates
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }

# Time handling
chrono = { version = "0.4.38", features = ["serde"] }

# Storage
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy"] }

# Apache Arrow ecosystem
arrow = { version = "57.0.0", features = ["prettyprint"] }
arrow-schema = { version = "57.0.0" }
datafusion = { version = "51.0.0" }
datafusion-common = { version = "51.0.0" }
sqlparser = { version = "0.59.0" }
parquet = { version = "57.0.0" }

# Web framework
actix-web = "4.12.0"
actix-web-actors = "4.3.0"
actix = "0.13"
actix-cors = "0.7"
actix-rt = "2.10"

# UUID generation
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# ULID generation
ulid = "1.1"

# JWT authentication
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["use_pem", "rust_crypto"] }

# Configuration
toml = "0.9.8"

# CLI tools
clap = { version = "4.5.53", features = ["derive", "color"] }
rustyline = { version = "17.0.2" }
tabled = { version = "0.20.0" }
crossterm = { version = "0.29.0" }

# System
num_cpus = "1.16"
sysinfo = "0.37.2"

# Testing
tempfile = "3.13"
wait-timeout = "0.2"

# Benchmarking
criterion = { version = "0.7.0", features = ["html_reports"] }

# Additional dependencies
bcrypt = "0.17.1"
rand = "0.9.2"
colored = "3.0.0"
fern = "0.7"
indicatif = "0.18.3"
console = "0.16.1"
rpassword = "7.3"
dirs = "6.0"
term_size = "0.3"
assert_cmd = "2.1.1"
predicates = "3.1"
futures-util = { version = "0.3", default-features = false }
base64 = "0.22"
bincode = { version = "2.0.1", features = ["serde"] }
async-trait = "0.1.74"
once_cell = "1.20"
regex = "1.11"
dashmap = "6.1"
hex = "0.4"
moka = { version = "0.12", features = ["future"] }
ntest = "0.9"
wasm-bindgen = { version = "0.2.105" }
wasm-bindgen-futures = { version = "0.4" }
js-sys = { version = "0.3" }
libc = "0.2"
web-sys = { version = "0.3" }
getrandom = { version = "0.2", features = ["js"] }

# [profile.release]
# opt-level = "z"     # Optimize for size
# lto = true          # Enable Link Time Optimization (removes unused code across crates)
# codegen-units = 1   # Slower build, but better optimization
# panic = "abort"     # Removes stack unwinding code
# strip = true        # Automatically strip symbols from the binary


[profile.dev]
opt-level = 0        # no optimizations = faster compile
debug = 1            # keep some debug info, but not huge
incremental = true   # incremental builds (usually default)
lto = "off"          # no link-time optimization
codegen-units = 256  # more parallelism for codegen