[package]
name = "kalamdb-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Core library
kalamdb-core = { path = "crates/kalamdb-core" }
kalamdb-api = { path = "crates/kalamdb-api" }
kalamdb-sql = { path = "crates/kalamdb-sql" }
kalamdb-store = { path = "crates/kalamdb-store" }
kalamdb-auth = { path = "crates/kalamdb-auth" }
kalamdb-commons = { path = "crates/kalamdb-commons" }
kalamdb-system = { path = "crates/kalamdb-system" }


# JWT authentication
jsonwebtoken = { workspace = true }

# Password hashing
bcrypt = { workspace = true }

# DataFusion for system schema registration
datafusion = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Configuration
toml = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }
fern = { workspace = true }
regex = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }

# System
num_cpus = { workspace = true }

[lib]
name = "kalamdb_server"
path = "src/lib.rs"

[[bin]]
name = "kalamdb-server"
path = "src/main.rs"

[[test]]
name = "test_shared_tables"
path = "tests/integration/tables/shared/test_shared_tables.rs"

[[test]]
name = "test_user_tables"
path = "tests/integration/tables/user/test_user_tables.rs"

[[test]]
name = "test_stream_tables"
path = "tests/integration/tables/stream/test_stream_tables.rs"

[[test]]
name = "test_quickstart"
path = "tests/integration/combined/test_quickstart.rs"

[[test]]
name = "test_system_tables"
path = "tests/integration/tables/system/test_system_tables.rs"

[[test]]
name = "test_flush_operations"
path = "tests/integration/flush/test_flush_operations.rs"

[[test]]
name = "test_storage_management"
path = "tests/integration/storage_management/test_storage_management.rs"

# Disabled: WebSocket test infrastructure incomplete
# Needs: receive_notifications(), get_notifications(), HTTP server setup
# [[test]]
# name = "test_live_query_changes"
# path = "tests/integration/combined/test_live_query_changes.rs"

[[test]]
name = "test_manual_flush_verification"
path = "tests/integration/flush/test_manual_flush_verification.rs"

[[test]]
name = "test_namespace_validation"
path = "tests/integration/combined/test_namespace_validation.rs"

# [[test]]
# name = "test_enhanced_api_features"
# path = "tests/integration/api/test_enhanced_api_features.rs"

[[test]]
name = "test_automatic_flushing"
path = "tests/integration/flush/test_automatic_flushing.rs"

[[test]]
name = "test_automatic_flushing_comprehensive"
path = "tests/integration/flush/test_automatic_flushing_comprehensive.rs"

# [[test]]
# name = "test_schema_integrity"
# path = "tests/integration/combined/test_schema_integrity.rs"

[[test]]
name = "test_stress_and_memory"
path = "tests/integration/combined/test_stress_and_memory.rs"

[[test]]
name = "test_row_count_behavior"
path = "tests/test_row_count_behavior.rs"

# Disabled: basic auth tests rely on legacy middleware; will be re-enabled after auth refactor
# [[test]]
# name = "test_basic_auth"
# path = "tests/test_basic_auth.rs"

# Disabled: relies on deprecated TestServer/AuthService patterns, file removed during migration
# [[test]]
# name = "test_edge_cases"
# path = "tests/test_edge_cases.rs"

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
# Internal crates (needed for tests)
kalamdb-core = { path = "crates/kalamdb-core" }
kalamdb-api = { path = "crates/kalamdb-api" }
kalamdb-auth = { path = "crates/kalamdb-auth" }
kalamdb-sql = { path = "crates/kalamdb-sql" }
kalamdb-store = { path = "crates/kalamdb-store" }
kalamdb-commons = { path = "crates/kalamdb-commons" }

# External dependencies
tempfile = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
rocksdb = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
datafusion = { workspace = true }
libc = { workspace = true }
arrow = { workspace = true }
hex = { workspace = true }
