[package]
name = "kalamdb-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
default-run = "kalamdb-server"
build = "build.rs"

[dependencies]
# Core library
kalamdb-core = { path = "crates/kalamdb-core" }
kalamdb-api = { path = "crates/kalamdb-api" }
kalamdb-sql = { path = "crates/kalamdb-sql" }
kalamdb-store = { path = "crates/kalamdb-store" }
kalamdb-auth = { path = "crates/kalamdb-auth" }
kalamdb-commons = { path = "crates/kalamdb-commons" }
kalamdb-system = { path = "crates/kalamdb-system" }


# JWT authentication
jsonwebtoken = { workspace = true }

# Password hashing
bcrypt = { workspace = true }

# DataFusion for system schema registration
datafusion = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Async futures utilities
futures-util = { workspace = true }

# Configuration
toml = { workspace = true }

# Logging
log = { workspace = true }
colored = { workspace = true }
fern = { workspace = true }
regex = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# System
num_cpus = { workspace = true }

[lib]
name = "kalamdb_server"
path = "src/lib.rs"

[[bin]]
name = "kalamdb-server"
path = "src/main.rs"

[[test]]
name = "test_shared_tables"
path = "tests/testserver/tables/test_shared_tables_http.rs"

[[test]]
name = "test_user_tables"
path = "tests/testserver/tables/test_user_tables_http.rs"

[[test]]
name = "test_stream_tables"
path = "tests/testserver/tables/test_stream_tables_http.rs"

[[test]]
name = "test_quickstart"
path = "tests/testserver/sql/test_quickstart_http.rs"

[[test]]
name = "test_system_tables"
path = "tests/testserver/system/test_system_tables_http.rs"

[[test]]
name = "test_flush_operations"
path = "tests/testserver/flush/test_flush_policy_verification_http.rs"

[[test]]
name = "test_storage_management"
path = "tests/testserver/storage/test_storage_management_http.rs"

[[test]]
name = "test_dml_parameters"
path = "tests/testserver/sql/test_dml_parameters_http.rs"

# Disabled: WebSocket test infrastructure incomplete
# Needs: receive_notifications(), get_notifications(), HTTP server setup
# [[test]]
# name = "test_live_query_changes"
# path = "tests/integration/combined/test_live_query_changes.rs"

[[test]]
name = "test_namespace_validation"
path = "tests/testserver/sql/test_namespace_validation_http.rs"

# [[test]]
# name = "test_enhanced_api_features"
# path = "tests/integration/api/test_enhanced_api_features.rs"

[[test]]
name = "test_pk_uniqueness_hot_cold"
path = "tests/testserver/flush/test_pk_uniqueness_hot_cold_http.rs"

[[test]]
name = "test_manifest_flush"
path = "tests/test_manifest_flush_integration.rs"
harness = true

# [[test]]
# name = "test_schema_integrity"
# path = "tests/integration/combined/test_schema_integrity.rs"

[[test]]
name = "test_stress_and_memory"
path = "tests/testserver/stress/test_stress_and_memory_http.rs"

[[test]]
name = "test_row_count_behavior"
path = "tests/test_row_count_behavior.rs"

[[test]]
name = "test_http_test_server_smoke"
path = "tests/testserver/test_http_test_server_smoke.rs"

[[test]]
name = "test_storage_abstraction_http"
path = "tests/testserver/test_storage_abstraction_http.rs"

[[test]]
name = "test_naming_validation_http"
path = "tests/testserver/sql/test_naming_validation_http.rs"

[[test]]
name = "test_user_sql_commands_http"
path = "tests/testserver/sql/test_user_sql_commands_http.rs"

[[test]]
name = "test_flush_jobs_http"
path = "tests/testserver/flush/test_flush_jobs_http.rs"

[[test]]
name = "test_flush_unregistered_suite_http"
path = "tests/testserver/flush/test_flush_unregistered_suite_http.rs"

[[test]]
name = "test_manifest_flush_http"
path = "tests/testserver/manifest/test_manifest_flush_http_v2.rs"

[[test]]
name = "test_manifest_persistence_http"
path = "tests/testserver/manifest/test_manifest_persistence_http.rs"

[[test]]
name = "test_production_observability_http"
path = "tests/testserver/observability/test_production_observability_http.rs"

# Disabled: basic auth tests rely on legacy middleware; will be re-enabled after auth refactor
# [[test]]
# name = "test_basic_auth"
# path = "tests/test_basic_auth.rs"

# Disabled: relies on deprecated TestServer/AuthService patterns, file removed during migration
# [[test]]
# name = "test_edge_cases"
# path = "tests/test_edge_cases.rs"

[build-dependencies]
chrono = { workspace = true }
cc = { workspace = true }

[dev-dependencies]
# Internal crates (needed for tests)
kalamdb-core = { path = "crates/kalamdb-core" }
kalamdb-api = { path = "crates/kalamdb-api" }
kalamdb-auth = { path = "crates/kalamdb-auth" }
kalamdb-sql = { path = "crates/kalamdb-sql" }
kalamdb-store = { path = "crates/kalamdb-store" }
kalamdb-commons = { path = "crates/kalamdb-commons" }
kalamdb-tables = { path = "crates/kalamdb-tables" }

# External dependencies
tempfile = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
actix-web = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
rocksdb = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
datafusion = { workspace = true }
libc = { workspace = true }
arrow = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serial_test = { workspace = true }
