[package]
name = "kalamdb-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
default-run = "kalamdb-server"
build = "build.rs"

[dependencies]
# Core library
kalamdb-core = { path = "crates/kalamdb-core" }
kalamdb-api = { path = "crates/kalamdb-api" }
kalamdb-sql = { path = "crates/kalamdb-sql" }
kalamdb-store = { path = "crates/kalamdb-store" }
kalamdb-auth = { path = "crates/kalamdb-auth" }
kalamdb-commons = { path = "crates/kalamdb-commons" }
kalamdb-configs = { path = "crates/kalamdb-configs" }
kalamdb-system = { path = "crates/kalamdb-system" }


# JWT authentication
jsonwebtoken = { workspace = true }

# Password hashing
bcrypt = { workspace = true }

# DataFusion for system schema registration
datafusion = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Async futures utilities
futures-util = { workspace = true }

# Configuration
toml = { workspace = true }

# Logging
log = { workspace = true }
colored = { workspace = true }
fern = { workspace = true }
regex = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# System
num_cpus = { workspace = true }

[lib]
name = "kalamdb_server"
path = "src/lib.rs"

[[bin]]
name = "kalamdb-server"
path = "src/main.rs"

[[test]]
name = "test_testserver"
path = "tests/testserver/test_testserver.rs"

[[test]]
name = "test_scenarios"
path = "tests/scenarios/test_scenarios.rs"


# [[test]]
# name = "test_cluster"
# path = "tests/cluster/test_cluster.rs"

[[test]]
name = "test_misc"
path = "tests/misc/test_misc.rs"


[build-dependencies]
chrono = { workspace = true }
cc = { workspace = true }

[dev-dependencies]
# Internal crates (needed for tests)
kalamdb-core = { path = "crates/kalamdb-core" }
kalamdb-api = { path = "crates/kalamdb-api" }
kalamdb-auth = { path = "crates/kalamdb-auth" }
kalamdb-sql = { path = "crates/kalamdb-sql" }
kalamdb-store = { path = "crates/kalamdb-store" }
kalamdb-commons = { path = "crates/kalamdb-commons" }
kalamdb-configs = { path = "crates/kalamdb-configs" }
kalamdb-tables = { path = "crates/kalamdb-tables" }
kalamdb-raft = { path = "crates/kalamdb-raft" }
kalamdb-sharding = { path = "crates/kalamdb-sharding" }
kalam-link = { path = "../link" }

# External dependencies
tempfile = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
actix-web = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
rocksdb = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
datafusion = { workspace = true }
libc = { workspace = true }
arrow = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
serial_test = { workspace = true }
ntest = { workspace = true }
