[package]
name = "kalamdb-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "KalamDB benchmark tool - generates JSON + HTML performance reports"

[[bin]]
name = "kalamdb-bench"
path = "src/main.rs"

[dependencies]
kalam-link = { path = "../link", default-features = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
sysinfo = "0.38.2"
hostname = "0.4"
num_cpus = "1.16"