[workspace]
members = [
    "kalam-link",
    "kalam-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = ["KalamDB Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kalamdb/kalamdb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "color"] }
rustyline = { version = "13.0" }
tabled = { version = "0.15" }
crossterm = { version = "0.27" }

# Config parsing
toml = { version = "0.8" }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[workspace.dev-dependencies]
# Test utilities
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
