[package]
name = "kalam-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive command-line client for KalamDB"
keywords = ["kalamdb", "database", "cli", "terminal"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "kalam"
path = "src/main.rs"

[dependencies]
# KalamDB connectivity
kalam-link = { path = "../link" }

# CLI argument parsing
clap = { workspace = true }

# Readline interface
rustyline = { workspace = true }

# Progress indicators
indicatif = { workspace = true }

# Terminal colors and styling
colored = { workspace = true }

# Config file parsing
toml = { workspace = true }

# Secure password input
rpassword = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Home directory detection
dirs = { workspace = true }

# Terminal dimensions
term_size = { workspace = true }

# Date/time formatting
chrono = { workspace = true }
rand.workspace = true

# Base64 encoding for history preservation
base64 = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
ntest = { workspace = true }
wait-timeout = { workspace = true }
