[package]
name = "kalam-link"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly-compatible KalamDB client library"
keywords = ["kalamdb", "database", "client", "websocket", "wasm"]
categories = ["database", "web-programming::websocket", "wasm"]

[dependencies]
# Async runtime (native only)
tokio = { workspace = true, optional = true }

# HTTP client (native only)
reqwest = { workspace = true, optional = true }

# WebSocket (native only)
tokio-tungstenite = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP Basic Auth encoding
base64 = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["js"] }

# Random number generation for WASM
getrandom = { workspace = true }

# Futures utilities
futures-util = { workspace = true, default-features = false }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# WASM bindings (T039, T040, T063A-T063B)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "console",
    # WebSocket support (T063A-T063B)
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "EventTarget",
    # Fetch API support (T063F-T063H)
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
], optional = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "reqwest", "tokio-tungstenite"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wasm-bindgen-test = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
